Stop auto cropping on cop photo upload (#30)
* Remove auto-cropping

* Correct attach to match our docker config

* Add EOF line

* Fix cop face footer overlapping descriptions

* Add explanatory comment

--- a/OpenOversight/app/static/css/openoversight.css
+++ b/OpenOversight/app/static/css/openoversight.css
@@ -563,3 +563,7 @@ tr:hover .row-actions {
 .setup-content {
     margin-bottom: 20px;
 }
+
+.bottom-10 {
+    bottom: 10px;
+}
